Adding tasks component view

--- a/src/features/task/task.view.html
+++ b/src/features/task/task.view.html
@@ -1,2 +1,5 @@
 <article>
+    <div class="col-xs-2">#{{ctrl.task.id}}</div>
+    <div class="col-xs-5">{{ctrl.task.startTime | date:"HH:mm:ss"}}</div>
+    <div class="col-xs-5">{{ctrl.task.endTime | date:"HH:mm:ss"}}</div>
 </article>
