--- a/src/features/task/task.view.html
+++ b/src/features/task/task.view.html
@@ -1,5 +1,5 @@
 <article>
     <div class="col-xs-2">#{{ctrl.task.id}}</div>
-    <div class="col-xs-5">{{ctrl.task.startTime | date:"HH:mm:ss"}}</div>
-    <div class="col-xs-5">{{ctrl.task.endTime | date:"HH:mm:ss"}}</div>
+    <div class="col-xs-5">{{ctrl.displayStartTime(ctrl.task)}}</div>
+    <div class="col-xs-5" ng-if="ctrl.task.endTime">{{ctrl.displayEndTime(ctrl.task)}}</div>
 </article>
