Fixing bootstrap issue + Adding keyboard shortcut

--- a/src/features/game/game.view.html
+++ b/src/features/game/game.view.html
@@ -1,4 +1,4 @@
-<section class="container">
+<section class="container" tabindex="0" ng-keypress="ctrl.checkKeypress($event)">
     <section class="row-fluid">
         <section class="col-xs-8">
             <article class="row">
