--- a/src/features/game/game.view.html
+++ b/src/features/game/game.view.html
@@ -8,11 +8,12 @@
             <task ng-repeat="task in ctrl.tasks" started-time="ctrl.startTime" class="row" data="task"></task>
         </section>
         <section class="col-xs-12 col-sm-6">
-            <article class="row">
-                <button class="btn btn-info" ng-click="showReport = !showReport">Report</button>
-            </article>
-            <!-- ng-if="showReport"  -->
-            <canvas tc-chartjs-line chart-data="ctrl.data" chart-options="ctrl.options"></canvas>
+            <section class="row">
+                <button class="pull-right btn btn-info" ng-click="ctrl.computeReport()">Report</button>
+            </section>
+            <section class="row" ng-if="ctrl.showReport">
+                <canvas tc-chartjs-line chart-data="ctrl.data" chart-options="ctrl.chartPptions"></canvas>
+            </section>
         </section>
     </section>
 </section>
