Adding WIP chart for better understanding

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <script src="jspm_packages/system.js"></script>
     <script src="jspm.browser.js"></script>
     <script src="jspm.config.js"></script>
+    <!--<script src="build.js"></script>-->
     <script>
         System.import('app/app.module.ts');
     </script>
