--- a/src/features/game/game.view.html
+++ b/src/features/game/game.view.html
@@ -22,6 +22,9 @@
             <section class="row" ng-if="ctrl.showReport">
                 <canvas tc-chartjs-line chart-data="ctrl.data" chart-options="ctrl.chartPptions"></canvas>
             </section>
+            <section class="row" ng-if="ctrl.showReport">
+                <canvas tc-chartjs-line chart-data="ctrl.wipData" chart-options="ctrl.chartPptions"></canvas>
+            </section>
         </section>
     </section>
 </section>
